...
                        <constraint firstAttribute="trailing" secondItem="2o7-VS-ah7" secondAttribute="trailing" constant="150" id="Hsh-Ng-ztu"/>
                        <constraint firstItem="2o7-VS-ah7" firstAttribute="top" secondItem="5h6-Zu-vqG" secondAttribute="top" constant="100" id="dvd-rh-C3D"/>
                    </constraints>
                </view>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MyM-Tg-fQU">
                    <rect key="frame" x="145.5" y="826" width="123" height="30"/>
                    <state key="normal" title="Skip and continue"/>
                    <connections>
                        <action selector="btnSkipAndContinue:" destination="-1" eventType="touchUpInside" id="kOe-Wz-WxY"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rfm-Pe-HKj">
                    <rect key="frame" x="50" y="774" width="314" height="40"/>
                    <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="40" id="nJm-sr-MDl"/>
                    </constraints>
                    <state key="normal" title="Enable Location">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </state>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="roundedCorner">
                            <real key="value" value="6"/>
                        </userDefinedRuntimeAttribute>
...
